Solve some warnings with Xcode 7 beta 6

--- a/EvernoteSDKSample/EvernoteSDKSample-Info.plist
+++ b/EvernoteSDKSample/EvernoteSDKSample-Info.plist
@@ -41,5 +41,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>en</string>
+	</array>
 </dict>
 </plist>
